--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -3,7 +3,9 @@
   background: #fde4e4;
   display: flex;
   text-align: start;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 5rem;
+  align-items: center;
 }
 
 .footer__logo img {
@@ -24,13 +26,16 @@
 }
 
 .delivery__time-item {
+  display: flex;
+  margin: 0;
+  gap: 0.7rem;
   background: transparent !important;
 }
 
 .delivery__time-item span {
   font-weight: 600;
-  font-style: 1rem;
   color: #212245;
+  margin: 0;
 }
 
 .delivery__time-item p {
@@ -47,6 +52,7 @@
   .footer {
     flex-direction: column;
     text-align: center;
+    gap: 1rem;
   }
 
   .footer__logo img {
