--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -150,3 +150,27 @@
     margin-top: -55px;
   }
 }
+
+@media only screen and (max-width: 480px) {
+  .menu {
+    width: 100%;
+  }
+}
+
+.close__button {
+  width: fit-content;
+  height: 60px;
+  padding: 10px 20px;
+  position: absolute;
+  top: 0.5rem;
+  right: 0rem;
+}
+
+.close__button span i {
+  font-size: 1.1rem;
+  background: #212245;
+  padding: 5px;
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+}
