--- a/src/styles/shopping-cart.css
+++ b/src/styles/shopping-cart.css
@@ -18,24 +18,13 @@
   z-index: 999999;
 }
 
-.cart__close {
-  width: 100%;
-  height: 60px;
-
-  padding: 10px 20px;
-}
-
-.cart__close span i {
-  font-size: 1.1rem;
-  background: #212245;
-  padding: 5px;
-  border-radius: 50%;
-  color: #fff;
-  cursor: pointer;
-}
 .cart__item-list {
   height: calc(100vh - 140px);
   overflow-y: scroll;
+}
+
+.cart__item-list > h6 {
+  margin-top: 5rem;
 }
 
 .cart__bottom {
